--- a/public/select2.css
+++ b/public/select2.css
@@ -8,12 +8,15 @@ select.js-select2,
     border: 1px solid #bacad6;
     border-radius: .5rem;
     background: white;
-    z-index: 1000;
 }
-.select2.select2-container {
+.select2-container.select2 {
     /* Style for only static select2 */
     width: 100%;
     max-width: 400px;
+}
+.select2-container:not(.select2) {
+    /* Style for only aboslute select2 */
+    z-index: 1000;
 }
 
 .select2-selection {
