--- a/resources/assets/styles/select2.css
+++ b/resources/assets/styles/select2.css
@@ -21,14 +21,32 @@ select.js-select2,
 
 .select2-selection {
     position: relative;
+    display: block;
+}
+.select2-selection--single .select2-selection__rendered {
+    position: relative;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     min-height: 2.2rem;
-    padding-left: 0.75rem;
-    padding-right: 1.75rem;
+    padding: 0 2.75rem 0 0.75rem;
     cursor: pointer;
-    width: 100%
+    width: 100%;
+}
+.select2-selection--multiple .select2-selection__rendered {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+.select2-selection__choice {
+    display: inline-block;
+    position: relative;
+    background: #53b783;
+    padding: 3px 29px 3px 9px;
+    border-radius: .5rem;
+    margin: .3rem 0 0 .3rem;
+    color: white;
+    font-size: 0.9em;
 }
 .select2-selection__arrow {
     position: absolute;
@@ -43,13 +61,22 @@ select.js-select2,
     height: 6px;
     box-shadow: inset 2px 2px #a3858e;
 }
-.select2-selection__clear {
+.select2-selection__clear,
+.select2-selection__choice__remove {
     position: absolute;
-    top: calc(50% - 17px);
-    right: 1.5rem;
+    top: calc(50% - 0.76em);
+    right: 1.4rem;
     color: red;
-    font-weight: bold;
     font-size: 1.5rem;
+    font-weight: bold;
+    border: none;
+    background: none;
+    z-index: 1;
+}
+.select2-selection__choice__remove {
+    right: 0.4rem;
+    font-size: 1.2rem;
+    font-weight: normal;
 }
 .select2-selection__placeholder {
     color: #a3858e;
@@ -76,13 +103,13 @@ select.js-select2,
 }
 .select2-search {
     display: block;
-    padding: 6px;
+    padding: .3rem;
 }
 .select2-search--hide {
     display: none;
 }
 .select2-search__field {
-    width: 100%;
+    width: 100% !important;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
     height: 2.2rem;
@@ -104,7 +131,7 @@ select.js-select2,
     cursor: pointer;
     padding: 0.25rem 0.75rem;
 }
-.select2-results__option[aria-selected=true] {
+.select2-results__option--selected {
     background: #ede5f5;
 }
 .select2-results__option:hover {
